--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,9 @@
-h1
-  | Home#index
-p
-  | Find me in app/views/home/index.html.erb
+#guide.container-fluid.mb-3
+  div.d-flex.my-5.border-b
+    h1.font-ferrum.mx-auto Guide
+#information.container-fluid.mb-3
+  div.d-flex.my-5.border-b
+    h1.font-ferrum.mx-auto Information
+#help.container-fluid.mb-3
+  div.d-flex.my-5.border-b
+    h1.font-ferrum.mx-auto Help
