--- a/app/views/shared/_login_header.html.slim
+++ b/app/views/shared/_login_header.html.slim
@@ -6,12 +6,12 @@ div.font-ferrum.d-flex.bd-highlight.mt-3.mx-5.border-b
       = render 'header/root_path_header'
     - elsif current_page?(users_path)
       = render 'header/users_path_header'
-    - elsif @my_mission.present? && current_page?(mission_tasks_path(@my_mission))
+    - elsif current_page?(mission_tasks_path(params[:mission_id]))
       = render 'header/mission_tasks_path_header'
   div.bd-highlight.w-20
     div.mr-3
-      = image_tag current_user.avatar(:small_icon)
-    div.header-position.w-20.mx-auto
+      = image_tag current_user.avatar(:small_icon), class: 'small-icon-size'
+    div.header-position.w-20.mx-auto.mt-4
       a.btn-task.mx-auto type="button" data-toggle="collapse" data-target="#menu"
         p.text-center.mx-2.mb-0.font-SoukouMincho #{current_user.name}さん
       div#menu.collapse.z-in-1.header-dropdown-position.w-80.text-center
