--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,9 +1,11 @@
-#guide.container-fluid.mb-3
-  div.d-flex.my-5.border-b
-    h1.font-ferrum.mx-auto Guide
-#information.container-fluid.mb-3
-  div.d-flex.my-5.border-b
-    h1.font-ferrum.mx-auto Information
-#help.container-fluid.mb-3
-  div.d-flex.my-5.border-b
-    h1.font-ferrum.mx-auto Help
+div
+  = image_tag 'bgimage', class: 'w-100'
+  #guide.container-fluid.mb-3
+    div.d-flex.my-5.border-b
+      h1.font-ferrum.mx-auto Guide
+  #information.container-fluid.mb-3
+    div.d-flex.my-5.border-b
+      h1.font-ferrum.mx-auto Information
+  #help.container-fluid.mb-3
+    div.d-flex.my-5.border-b
+      h1.font-ferrum.mx-auto Help
