--- a/app/views/missions/new.html.slim
+++ b/app/views/missions/new.html.slim
@@ -5,7 +5,7 @@ div.container-fluid.mb-3
 div.container
   div.row
     div.col-md-10.offset-md-1.col-lg-8.offset-lg-2
-      = form_with model: @mission, local: true do |f|
+      = form_with model: @mission, remote: true, id: 'new_mission_form' do |f|
         = render 'layouts/error_messages', model: f.object
         div.form-group
           = f.label :title, 'Mission title', {class: 'form-field'}
@@ -13,9 +13,11 @@ div.container
         div.form-group
           = f.label :start_date, 'Start date', {class: 'form-field'}
           = f.date_field :start_date, class: 'form-style', id: 'mission_start_date', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
+          div#create_mission_errors_start_date
         div.form-group
           = f.label :end_date, 'End date', {class: 'form-field'}
           = f.date_field :end_date, class: 'form-style', id: 'mission_end_date', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
+          div#create_mission_errors_end_date
         div.form-group
           = f.label :memo, 'Memo', {class: 'form-field'}
           = f.text_area :memo, class: 'form-style', id: 'mission_memo', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
