--- a/app/views/shared/_login_header.html.slim
+++ b/app/views/shared/_login_header.html.slim
@@ -2,12 +2,16 @@ div.font-ferrum.d-flex.bd-highlight.mt-3.mx-5.border-b
   div.bd-highlight.mr-auto
     = link_to 'Task Quest', root_path, class: 'header-title-style'
   div.bd-highlight.d-flex.mr-4
-    - if current_page?(root_path)
-      = render 'header/root_path_header'
+      
+    
+    - if current_page?(root_path) || current_page?(new_users_path) || current_page?(login_path) || current_page?(privacy_path)
+      = render 'header/header_01'
     - elsif current_page?(users_path)
       = render 'header/users_path_header'
-    - elsif current_page?(mission_tasks_path(params[:mission_id]))
-      = render 'header/mission_tasks_path_header'
+    - elsif current_page?(new_mission_path)
+      = render 'header/new_mission_header'
+    - elsif current_page?(mission_tasks_path(params[:mission_id])) || current_page?(new_mission_schedule_path(params[:mission_id]))
+      = render 'header/task_schedule_note_header'
   div.bd-highlight.w-20
     div.mr-3
       = image_tag current_user.avatar(:small_icon), class: 'small-icon-size'
