--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,4 +1,4 @@
-div.container-fluid.mb-3
+#signup.container-fluid.mb-3
   div.d-flex.mt-5.border-b
     h1.page-title.float-left.ml-5 SIGN UP
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border 新規登録
@@ -20,4 +20,4 @@ div.container.w-75
           = f.label :password_confirmation, 'Password confirmation', {class: 'form-field'}
           = f.password_field :password_confirmation, class: 'form-style', id: 'user_password_confirmation', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
         div.form-group.text-center.form-group-height
-          = f.submit 'SIGN UP', class: 'btn-style-lg'
+          = f.submit "SIGN UP", class: 'btn-style-lg', id: 'SIGNUPbutton'
