--- a/app/views/missions/new.html.slim
+++ b/app/views/missions/new.html.slim
@@ -2,7 +2,7 @@ div.container-fluid.mb-3
   div.d-flex.mt-5.border-b
     h1.page-title.float-left.ml-5 New mission
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border ミッション作成
-div.container
+div.container.bg-chara
   div.row
     div.col-md-10.offset-md-1.col-lg-8.offset-lg-2
       = form_with model: @mission, remote: true, id: 'new_mission_form' do |f|
